# mrgui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/mrgui/: types.hpp
include/mrui/: atlas.hpp  context.hpp  coord.hpp  font.hpp  rect.hpp  renderer.hpp  types.hpp  vbo.hpp
unit_tests/: CMakeLists.txt
